--- a/CSS/stylehome.css
+++ b/CSS/stylehome.css
@@ -1,11 +1,15 @@
 body{
+		
+/* background colour */
 	 background-color: #89a4b9;
 	 
 	}
   #banner{
+	  /* eden banner */
 	position: absolute;
 	height: 100px;
-	width: 100%;
+	width: 100%;'
+	/* makes sure its at the very top of the page */
 	top: 0px;
 	left: 0%
 }
@@ -23,9 +27,11 @@ body{
 	margin: 0 auto;
 	
 }
+/* changes colour of nav when hovered on */
 .nav-list :hover {
 	color: #d096ff;
 }
+/* makes the position of menu item more to the right */
 #album{
 	margin-left: 8%;
 }
@@ -34,11 +40,12 @@ body{
   margin: 1% auto;
   
 }
+/*  positioniong of menu list*/
 .nav-list > li {
 	margin-right: 8%;
 	 display: inline-block;
 }
-
+/* apperance of menu boxes */
 .nav-list a {
 	
   display: block;
@@ -52,10 +59,12 @@ body{
   box-sizing:border-box;
   
 }
+/* text font and colour */
 .text {
 	font-size: 10px ;
 	font-family: "Bahnschrift", "Light", "SemiCondensed";
 }
+/*  the area that all images and content is held in when being viewed*/
 .slider-holder
         {
             width: 800px;
@@ -77,7 +86,7 @@ body{
             height: 400px;
             clear: both;
             position: relative;
-            
+            /* transition effect */
             -webkit-transition: left 2s;
             -moz-transition: left 2s;
             -o-transition: left 2s;
